2008-08-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- More hintful image title.

2007-08-08  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php:
	- More consistent function naming.
	- Removal of $this->_uniqueID, use $this->get_notation_name() instead.
	- Also check if programs are usable by executing a program and
	  reading its output.
	* wp-scorerender.php:
	- Change cache file name, append "sr-<notation>-" to diffrentiate.
	- load_plugin_textdomain() also check translation in WP lang dir.

2007-06-15  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php (getInputFileContent):
	- Removed, use the method in parent class instead.

	* wp-scorerender.php:
	- No more enables rendering for each notation or post/comment
	separately; rendering for posts is always enabled, and rendering for
	comment is unified in one single option.

2007-06-13  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php (getInputFileContent):
	- Implement base method but allows other subclasses to override it.

2007-06-12  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.*.php:
	More complete documentation.

2007-06-10  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: PHP4 compatibility fix.

2007-06-10  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php:
	- Load text domain properly.

2007-06-08  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_admin_section_caching) Disable 'Clear cache' button if
	directory not writable.
	- (scorerender_generate_html_error) Reintroduce this function.
	- Allow other handling methods upon rendering error.

2007-06-07  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Better ngettext usage.

2007-06-07  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php:
	- Drop unneeded input variable in getInputFileContents() and class
	initialization method.

	* class.scorerender.inc.php, wp-scorerender.php:
	- Add new error constant.
