@@ -1,3 +1,9 @@
+2008-08-17  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- (get_upload_dir) New func.
+	- (scorerender_get_options) Better guess of Windows program path.
+
 2008-08-05  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
